[package]
authors = ["Alex Huszagh <ahuszagh@gmail.com>"]
categories = ["science", "compression", "no-std"]
description = "A pure rust implementation of ms-numpress, a fast, minimally lossy compression algorithm for mass spectrometry data."
documentation = "https://docs.rs/numpress"
keywords = ["biology", "mass_spectrometry", "proteomics", "compression"]
license = "BSD-3-Clause-Clear/Apache-2.0"
name = "numpress"
readme = "README.md"
repository = "https://github.com/AlexHuszagh/numpress"
version = "1.0.9"

[dependencies]
# Global allocator only used during testing.
wee_alloc = { version = "0.4", optional = true }

[dev-dependencies]
approx = "0.3.0"
rand = "0.5"

[badges]
travis-ci = { repository = "AlexHuszagh/numpress" }

[features]
default = ["std"]
alloc = ["wee_alloc"]
std = []
nightly = []
